--- a/css/master.css
+++ b/css/master.css
@@ -69,6 +69,13 @@ section > h2 {
   margin: 50px auto;
   border-radius: 15px;
 }
+@media (max-width: 767px) {
+  .card {
+    min-width: 100%;
+    margin: 0;
+    border-radius: 0px;
+  }
+}
 .card .image {
   width: 100%;
   border-radius: 8px;
